rem to em fix for letter-spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ ul {
   font-weight: 700;
   font-size: 18px;
   line-height: 1.17;
-  letter-spacing: 0.03rem;
+  letter-spacing: 0.03em;
   vertical-align: middle;
   text-transform: uppercase;
   color: var(--primary-brand-color);
